force-app/main/default/objects/Project_Assessment__c/Project_Assessment__c.object-meta.xml
<CustomObject>
    <label>Project Assessment</label>
    <nameField>
        <label>Project Assessment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>