force-app/main/default/objects/Project_Assessment__c/fields/a_LGen_Delivery_any_constraints__c.field-meta.xml
<CustomField>
    <fullName>a_LGen_Delivery_any_constraints__c</fullName>
    <inlineHelpText>LGen Delivery - any constraints re: site access, crane, etc.?</inlineHelpText>
    <label>LGen Delivery - any constraints?</label>
    <type>TextArea</type>
</CustomField>