force-app/main/default/objects/Project_Assessment__c/fields/Account_Executive_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Email__c</fullName>
    <label>Account Executive Email</label>
    <type>Email</type>
</CustomField>