force-app/main/default/objects/Project_Assessment__c/fields/Account_Executive_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Phone__c</fullName>
    <label>Account Executive Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>