force-app/main/default/objects/Project_Assessment__c/fields/Acreage_of_Parcel__c.field-meta.xml
<CustomField>
    <fullName>Acreage_of_Parcel__c</fullName>
    <label>Acreage of Parcel</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>