force-app/main/default/objects/Project_Assessment__c/fields/Additional_Metering_needed_for_Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Additional_Metering_needed_for_Fuel_Rate__c</fullName>
    <inlineHelpText>Additional Metering Required for Fuel Rates?</inlineHelpText>
    <label>Additional Metering needed for Fuel Rate</label>
    <type>TextArea</type>
</CustomField>