force-app/main/default/objects/Project_Assessment__c/fields/Air_District__c.field-meta.xml
<CustomField>
    <fullName>Air_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Air District</inlineHelpText>
    <label>Air District</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipLabel>Project Assessments</relationshipLabel>
    <relationshipName>Regulatory_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>