force-app/main/default/objects/Project_Assessment__c/fields/Air_Permitting__c.field-meta.xml
<CustomField>
    <fullName>Air_Permitting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EDS-3690</description>
    <label>Air Permitting</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Assessments8</relationshipName>
    <type>Lookup</type>
</CustomField>