force-app/main/default/objects/Project_Assessment__c/fields/Allowances_for_gas_connection_costs__c.field-meta.xml
<CustomField>
    <fullName>Allowances_for_gas_connection_costs__c</fullName>
    <inlineHelpText>Are there allowances available to offset gas interconnection costs?</inlineHelpText>
    <label>Allowances for gas connection costs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>