force-app/main/default/objects/Project_Assessment__c/fields/Alta_Survey_required__c.field-meta.xml
<CustomField>
    <fullName>Alta_Survey_required__c</fullName>
    <label>Alta Survey required</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>