force-app/main/default/objects/Project_Assessment__c/fields/Anticipated_number_of_units__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_number_of_units__c</fullName>
    <formula>Site__r.Number_of_Units__c</formula>
    <label>Anticipated number of units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>