force-app/main/default/objects/Project_Assessment__c/fields/Anticipated_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Size_kW__c</fullName>
    <formula>Site__r.Number_of_Units__c  *  250</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anticipated Size kW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>