force-app/main/default/objects/Project_Assessment__c/fields/Any_utility_specific_restrictions__c.field-meta.xml
<CustomField>
    <fullName>Any_utility_specific_restrictions__c</fullName>
    <inlineHelpText>Are there any utility-specific restrictions that would negatively impact us (other than 3rd party ownership (row 40))? One example would be a RPS target which makes permitting a fuel-based generator more challenging.</inlineHelpText>
    <label>Any utility-specific restrictions?</label>
    <type>TextArea</type>
</CustomField>