force-app/main/default/objects/Project_Assessment__c/fields/Are_we_authorized_to_do_additional_work__c.field-meta.xml
<CustomField>
    <fullName>Are_we_authorized_to_do_additional_work__c</fullName>
    <label>Are we authorized to do additional work?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>