force-app/main/default/objects/Project_Assessment__c/fields/Assessor_s_Parcel_Number_APN__c.field-meta.xml
<CustomField>
    <fullName>Assessor_s_Parcel_Number_APN__c</fullName>
    <label>Assessor&apos;s Parcel Number (APN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>