force-app/main/default/objects/Project_Assessment__c/fields/Authority_Having_Jurisdiction_AHJ__c.field-meta.xml
<CustomField>
    <fullName>Authority_Having_Jurisdiction_AHJ__c</fullName>
    <label>Authority Having Jurisdiction (AHJ)</label>
    <type>TextArea</type>
</CustomField>