force-app/main/default/objects/Project_Assessment__c/fields/Backup_kit_microgrid_or_other_resilien__c.field-meta.xml
<CustomField>
    <fullName>Backup_kit_microgrid_or_other_resilien__c</fullName>
    <inlineHelpText>Backup kit, microgrid, or other resiliency included in scope?</inlineHelpText>
    <label>Backup kit/microgrid/other resiliency?</label>
    <type>TextArea</type>
</CustomField>