force-app/main/default/objects/Project_Assessment__c/fields/Boundary_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Boundary_Concerns__c</fullName>
    <label>Boundary Concerns</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>