force-app/main/default/objects/Project_Assessment__c/fields/Breaker_Space_Exists_existng_breaker__c.field-meta.xml
<CustomField>
    <fullName>Breaker_Space_Exists_existng_breaker__c</fullName>
    <inlineHelpText>Load Side Breaker Space Exists and/or Existing Breaker to be Used?</inlineHelpText>
    <label>Breaker Space Exists /existng breaker</label>
    <type>TextArea</type>
</CustomField>