force-app/main/default/objects/Project_Assessment__c/fields/Building_Permit_concerns__c.field-meta.xml
<CustomField>
    <fullName>Building_Permit_concerns__c</fullName>
    <label>Building Permit concerns?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>