force-app/main/default/objects/Project_Assessment__c/fields/Building_permit_process__c.field-meta.xml
<CustomField>
    <fullName>Building_permit_process__c</fullName>
    <label>Building permit process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>