force-app/main/default/objects/Project_Assessment__c/fields/Building_Size__c.field-meta.xml
<CustomField>
    <fullName>Building_Size__c</fullName>
    <label>Building Size</label>
    <type>TextArea</type>
</CustomField>