force-app/main/default/objects/Project_Assessment__c/fields/Can_you_add_an_Electrical_IX_Interconn__c.field-meta.xml
<CustomField>
    <fullName>Can_you_add_an_Electrical_IX_Interconn__c</fullName>
    <label>Electrical IX - Interconnection Notes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>