force-app/main/default/objects/Project_Assessment__c/fields/Capacity_Factor__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Factor__c</fullName>
    <label>Capacity Factor</label>
    <type>TextArea</type>
</CustomField>