force-app/main/default/objects/Project_Assessment__c/fields/Cash_Flow_Projection_Firm_Propoposal__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Projection_Firm_Propoposal__c</fullName>
    <inlineHelpText>Link to Cash Flow Projection, Firm Proposal</inlineHelpText>
    <label>Cash Flow Projection, Firm Propoposal</label>
    <type>TextArea</type>
</CustomField>