force-app/main/default/objects/Project_Assessment__c/fields/CEQA_Applicability_document_needed__c.field-meta.xml
<CustomField>
    <fullName>CEQA_Applicability_document_needed__c</fullName>
    <label>CEQA Applicability (document needed)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>