force-app/main/default/objects/Project_Assessment__c/fields/Climate_Action_Plan_Consistency__c.field-meta.xml
<CustomField>
    <fullName>Climate_Action_Plan_Consistency__c</fullName>
    <label>Climate Action Plan Consistency</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>