force-app/main/default/objects/Project_Assessment__c/fields/COD_Requirements__c.field-meta.xml
<CustomField>
    <fullName>COD_Requirements__c</fullName>
    <label>COD Requirements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>