force-app/main/default/objects/Project_Assessment__c/fields/Compliant_With_AHJ_Parking_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Compliant_With_AHJ_Parking_Requirements__c</fullName>
    <inlineHelpText>Is The Site Compliant With AHJ Parking Requirements (# of spaces, ADA)</inlineHelpText>
    <label>Compliant With AHJ Parking Requirements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>