force-app/main/default/objects/Project_Assessment__c/fields/Cost_Estimate_and_Cost_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate_and_Cost_Tracker__c</fullName>
    <label>Cost Estimate and Cost Tracker</label>
    <type>TextArea</type>
</CustomField>