force-app/main/default/objects/Project_Assessment__c/fields/Cultural_Resources_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Resources_Consultation__c</fullName>
    <label>Cultural Resources Consultation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>