force-app/main/default/objects/Project_Assessment__c/fields/Customer_Approval_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Requirements__c</fullName>
    <inlineHelpText>Customer Approval Requirements</inlineHelpText>
    <label>Customer Approval Requirements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>