force-app/main/default/objects/Project_Assessment__c/fields/Customer_Approved_Access_Days_Times__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approved_Access_Days_Times__c</fullName>
    <label>Customer Approved Access Days / Times</label>
    <type>TextArea</type>
</CustomField>