force-app/main/default/objects/Project_Assessment__c/fields/Customer_expecting_incentives_grants__c.field-meta.xml
<CustomField>
    <fullName>Customer_expecting_incentives_grants__c</fullName>
    <inlineHelpText>Is the customer currently or expecting to receive any incentives, grants, or other funding mechanism for this or other DER projects?</inlineHelpText>
    <label>Customer expecting incentives/grants</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>