force-app/main/default/objects/Project_Assessment__c/fields/Customer_likely_for_grid_service_program__c.field-meta.xml
<CustomField>
    <fullName>Customer_likely_for_grid_service_program__c</fullName>
    <inlineHelpText>&quot;Is the customer electricity use profile a likely candidate for grid service programs?(Reach out to Brian Kauffman if unsure)&quot;</inlineHelpText>
    <label>Customer likely for grid service program</label>
    <type>TextArea</type>
</CustomField>