force-app/main/default/objects/Project_Assessment__c/fields/Customer_s_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Legal_Entity__c</fullName>
    <label>Customer&apos;s Legal Entity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>