force-app/main/default/objects/Project_Assessment__c/fields/Customer_s_Onsite_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Onsite_Address__c</fullName>
    <label>Customer&apos;s Onsite Address</label>
    <type>TextArea</type>
</CustomField>