force-app/main/default/objects/Project_Assessment__c/fields/Customer_s_Onsite_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Onsite_POC_Email__c</fullName>
    <label>Customer&apos;s Onsite POC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>