force-app/main/default/objects/Project_Assessment__c/fields/Customer_s_Onsite_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Onsite_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer&apos;s Onsite Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Assessments (Customer&apos;s Onsite Point of Contact)</relationshipLabel>
    <relationshipName>Project_Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>