force-app/main/default/objects/Project_Assessment__c/fields/Customer_s_Primary_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Primary_POC_Phone__c</fullName>
    <label>Customer&apos;s Primary POC Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>