force-app/main/default/objects/Project_Assessment__c/fields/Customer_s_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Tax_ID__c</fullName>
    <label>Customer&apos;s Tax ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>