force-app/main/default/objects/Project_Assessment__c/fields/Customer_s_Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Type_of_Business__c</fullName>
    <label>Customer&apos;s Type of Business</label>
    <length>100</length>
    <type>Text</type>
</CustomField>