force-app/main/default/objects/Project_Assessment__c/fields/Date_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Date_Initiated__c</fullName>
    <label>Date Initiated</label>
    <type>Date</type>
</CustomField>