force-app/main/default/objects/Project_Assessment__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Indicative Offer</fullName>
            </value>
            <value>
                <fullName>Indicative Offer</fullName>
            </value>
            <value>
                <fullName>Firm Pricing</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>