force-app/main/default/objects/Project_Assessment__c/fields/Deal_type__c.field-meta.xml
<CustomField>
    <fullName>Deal_type__c</fullName>
    <label>Deal type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESA</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Build-Transfer</fullName>
            </value>
            <value>
                <fullName>Tolling</fullName>
            </value>
            <value>
                <fullName>To Be Determined</fullName>
            </value>
            <value>
                <fullName>Cash-MSE, ESA-Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>