force-app/main/default/objects/Project_Assessment__c/fields/Dedications__c.field-meta.xml
<CustomField>
    <fullName>Dedications__c</fullName>
    <label>Dedications</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>