force-app/main/default/objects/Project_Assessment__c/fields/Easements__c.field-meta.xml
<CustomField>
    <fullName>Easements__c</fullName>
    <label>Easements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>