force-app/main/default/objects/Project_Assessment__c/fields/Electric_connection_Timeline_months__c.field-meta.xml
<CustomField>
    <fullName>Electric_connection_Timeline_months__c</fullName>
    <inlineHelpText>Expected conditional Electric Interconnection Timeline (months)</inlineHelpText>
    <label>Electric connection Timeline (months)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>