force-app/main/default/objects/Project_Assessment__c/fields/Electric_service_tariff_current__c.field-meta.xml
<CustomField>
    <fullName>Electric_service_tariff_current__c</fullName>
    <label>Electric service tariff - current</label>
    <length>200</length>
    <type>Text</type>
</CustomField>