force-app/main/default/objects/Project_Assessment__c/fields/Electric_service_tariff_post_interconnec__c.field-meta.xml
<CustomField>
    <fullName>Electric_service_tariff_post_interconnec__c</fullName>
    <inlineHelpText>Electric service tariff - post interconnection</inlineHelpText>
    <label>Electric service tariff-post IX</label>
    <length>200</length>
    <type>Text</type>
</CustomField>