force-app/main/default/objects/Project_Assessment__c/fields/Electric_Utility__c.field-meta.xml
<CustomField>
    <fullName>Electric_Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Electric Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipName>Regulatory_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>