force-app/main/default/objects/Project_Assessment__c/fields/Electric_Utility_type__c.field-meta.xml
<CustomField>
    <fullName>Electric_Utility_type__c</fullName>
    <label>Electric Utility type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Investor Owned</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>