force-app/main/default/objects/Project_Assessment__c/fields/Electrical_Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Sales_Notes__c</fullName>
    <label>Electrical IX - Sales Notes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>