force-app/main/default/objects/Project_Assessment__c/fields/Electrical_Utility_Account_Rep__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Utility_Account_Rep__c</fullName>
    <inlineHelpText>Electrical Utility Account Representative Contact Information</inlineHelpText>
    <label>Electrical Utility Account Rep</label>
    <type>TextArea</type>
</CustomField>