force-app/main/default/objects/Project_Assessment__c/fields/Eligible_for_retail_electricity_supply__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_retail_electricity_supply__c</fullName>
    <inlineHelpText>Is the Customer eligible for retail electricity supply?</inlineHelpText>
    <label>Eligible for retail electricity supply?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>