force-app/main/default/objects/Project_Assessment__c/fields/Endangered_Species__c.field-meta.xml
<CustomField>
    <fullName>Endangered_Species__c</fullName>
    <label>Endangered Species</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>