force-app/main/default/objects/Project_Assessment__c/fields/Environmental_Permitting__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Permitting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environmental Permitting</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Assessments5</relationshipName>
    <type>Lookup</type>
</CustomField>