force-app/main/default/objects/Project_Assessment__c/fields/ESA_Phase_2_required__c.field-meta.xml
<CustomField>
    <fullName>ESA_Phase_2_required__c</fullName>
    <label>ESA Phase 2 required</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>