force-app/main/default/objects/Project_Assessment__c/fields/Estimated_LGen_System_Annual_Production__c.field-meta.xml
<CustomField>
    <fullName>Estimated_LGen_System_Annual_Production__c</fullName>
    <label>Estimated LGen System Annual Production</label>
    <type>TextArea</type>
</CustomField>