force-app/main/default/objects/Project_Assessment__c/fields/Executed_Contract_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Executed_Contract_with_Customer__c</fullName>
    <label>Executed Contract with Customer</label>
    <type>TextArea</type>
</CustomField>