force-app/main/default/objects/Project_Assessment__c/fields/Existing_and_or_Future_Solar_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>Existing_and_or_Future_Solar_Size_kW__c</fullName>
    <label>Existing and/or Future Solar Size kW</label>
    <type>TextArea</type>
</CustomField>