force-app/main/default/objects/Project_Assessment__c/fields/Existing_Development_permits__c.field-meta.xml
<CustomField>
    <fullName>Existing_Development_permits__c</fullName>
    <inlineHelpText>Existing Development permits for property</inlineHelpText>
    <label>Existing Development permits</label>
    <type>TextArea</type>
</CustomField>