force-app/main/default/objects/Project_Assessment__c/fields/Existing_Electrical_Utility_Account_no__c.field-meta.xml
<CustomField>
    <fullName>Existing_Electrical_Utility_Account_no__c</fullName>
    <label>Existing Electrical Utility Account no.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>