force-app/main/default/objects/Project_Assessment__c/fields/Existing_Electrical_Utility_Loads__c.field-meta.xml
<CustomField>
    <fullName>Existing_Electrical_Utility_Loads__c</fullName>
    <label>Existing Electrical Utility Loads</label>
    <type>TextArea</type>
</CustomField>