force-app/main/default/objects/Project_Assessment__c/fields/Existing_Electrical_Utility_Recent_Bill__c.field-meta.xml
<CustomField>
    <fullName>Existing_Electrical_Utility_Recent_Bill__c</fullName>
    <label>Existing Electrical Utility Recent Bill</label>
    <type>TextArea</type>
</CustomField>