force-app/main/default/objects/Project_Assessment__c/fields/Existing_Environmental_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Existing_Environmental_Assessment__c</fullName>
    <label>Existing Environmental Assessment</label>
    <type>TextArea</type>
</CustomField>