force-app/main/default/objects/Project_Assessment__c/fields/Existing_Environmental_permits__c.field-meta.xml
<CustomField>
    <fullName>Existing_Environmental_permits__c</fullName>
    <inlineHelpText>Existing Environmental permits for property</inlineHelpText>
    <label>Existing Environmental permits</label>
    <type>TextArea</type>
</CustomField>