force-app/main/default/objects/Project_Assessment__c/fields/Existing_Facility_Record_Drawings__c.field-meta.xml
<CustomField>
    <fullName>Existing_Facility_Record_Drawings__c</fullName>
    <label>Existing Facility Record Drawings</label>
    <type>TextArea</type>
</CustomField>