force-app/main/default/objects/Project_Assessment__c/fields/Existing_Fuel_Service_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_Fuel_Service_Account_Number__c</fullName>
    <label>Existing Fuel Service Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>