force-app/main/default/objects/Project_Assessment__c/fields/Existing_Fuel_Service_Loads__c.field-meta.xml
<CustomField>
    <fullName>Existing_Fuel_Service_Loads__c</fullName>
    <label>Existing Fuel Service Loads</label>
    <type>TextArea</type>
</CustomField>