force-app/main/default/objects/Project_Assessment__c/fields/Existing_Fuel_Service_Recent_Bill__c.field-meta.xml
<CustomField>
    <fullName>Existing_Fuel_Service_Recent_Bill__c</fullName>
    <label>Existing Fuel Service Recent Bill</label>
    <type>TextArea</type>
</CustomField>