force-app/main/default/objects/Project_Assessment__c/fields/Existing_Future_BESS_Annual_Production__c.field-meta.xml
<CustomField>
    <fullName>Existing_Future_BESS_Annual_Production__c</fullName>
    <inlineHelpText>Existing and/or Future BESS Annual Production</inlineHelpText>
    <label>Existing / Future BESS Annual Production</label>
    <type>TextArea</type>
</CustomField>