force-app/main/default/objects/Project_Assessment__c/fields/Existing_future_diesel_generator_size__c.field-meta.xml
<CustomField>
    <fullName>Existing_future_diesel_generator_size__c</fullName>
    <label>Existing/future diesel generator size</label>
    <type>TextArea</type>
</CustomField>