force-app/main/default/objects/Project_Assessment__c/fields/Existing_Future_Microgrid_size__c.field-meta.xml
<CustomField>
    <fullName>Existing_Future_Microgrid_size__c</fullName>
    <label>Existing/Future Microgrid size</label>
    <type>TextArea</type>
</CustomField>